Add language indexes and pages

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -26,6 +26,7 @@
           <a href="{{ '/' | url }}">Home</a>
           <a href="{{ '/search/' | url }}">Search</a>
           <a href="{{ '/sources/' | url }}">Sources</a>
+          <a href="{{ '/languages/' | url }}">Languages</a>
           {% for cat in categories %}
             <a href="{{ ('/category/' + cat.slug + '/') | url }}">{{ cat.label }}</a>
           {% endfor %}
