--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -7,9 +7,8 @@ eleventyExcludeFromCollections: true
   {% for item in collections.all %}
     {% if item.url %}
       <url>
-        <loc>{{ item.url | absoluteUrl(site.url) }}</loc>
+        <loc>{{ item.url | url | absoluteUrl(site.url) }}</loc>
       </url>
     {% endif %}
   {% endfor %}
 </urlset>
-
