--- a/src/about.njk
+++ b/src/about.njk
@@ -12,7 +12,10 @@ rssPath: /feed.xml
 </p>
 
 <p>
-  <strong>RSS:</strong> <a href="{{ '/feed.xml' | url }}">/feed.xml</a>
+  <strong>Links:</strong>
+  <a href="{{ '/feed.xml' | url }}">RSS</a>
+  · <a href="{{ '/sources/' | url }}">Sources</a>
+  · <a href="{{ '/languages/' | url }}">Languages</a>
 </p>
 
 {% if stats %}
