--- a/src/sitemap.njk
+++ b/src/sitemap.njk
@@ -8,6 +8,9 @@ eleventyExcludeFromCollections: true
     {% if item.url %}
       <url>
         <loc>{{ item.url | url | absoluteUrl(site.url) }}</loc>
+        {% if item.date %}
+          <lastmod>{{ item.date | formatDate }}</lastmod>
+        {% endif %}
       </url>
     {% endif %}
   {% endfor %}
